<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bk"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include layout="@layout/activity_layout_head" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_score_buy_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我的余额"
                    android:textColor="#66FFFFFF"
                    android:textSize="@dimen/font_size_normal" />

                <TextView
                    android:id="@+id/tv_score_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:drawableLeft="@drawable/icon_my_score"
                    android:drawablePadding="3dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <GridView
            android:id="@+id/gv_score_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="3"
            android:padding="10dp"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/contact_service"
            android:textColor="@color/app_text_color2"
            android:textSize="@dimen/font_size_normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_wechat_service"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/wechat_official_account"
                android:textColor="@color/app_main_text_color"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:id="@+id/tv_wechat_official"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/yiye_wechat_official_account"
                android:textColor="@color/app_text_color2"
                android:textSize="@dimen/font_size_normal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_yiye_service_tel"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/service_tel"
                android:textColor="@color/app_main_text_color"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:id="@+id/tv_service_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/yiye_service_tel_number"
                android:textColor="@color/app_text_color2"
                android:textSize="@dimen/font_size_normal" />

        </RelativeLayout>

    </LinearLayout>
</layout>