<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="48dp"
            android:background="@color/main_bk"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_above="@+id/main_radiogroup"
            android:background="@color/main_bk" />

        <RadioGroup
            android:id="@+id/main_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maintabs_radio_home"
                style="@style/MainRadioButtonTheme"
                android:checked="true"
                android:drawableTop="@drawable/main_home_bg"
                android:text="@string/main_home"
                android:textColor="@color/main_nav_text_color" />

            <RadioButton
                android:id="@+id/maintabs_radio_nearby"
                style="@style/MainRadioButtonTheme"
                android:drawableTop="@drawable/main_nearby_bg"
                android:text="@string/main_nearby"
                android:textColor="@color/main_nav_text_color" />

            <RadioButton
                android:id="@+id/maintabs_radio_order"
                style="@style/MainRadioButtonTheme"
                android:drawableTop="@drawable/main_order_bg"
                android:text="@string/main_order"
                android:textColor="@color/main_nav_text_color" />

            <RadioButton
                android:id="@+id/maintabs_radio_mine"
                style="@style/MainRadioButtonTheme"
                android:drawableTop="@drawable/main_mine_bg"
                android:text="@string/main_mine"
                android:textColor="@color/main_nav_text_color" />
        </RadioGroup>

        <!-- 实现提醒信息用的 -->
        <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:background="@color/transparent"-->
        <!--android:orientation="horizontal">-->
        <!--&lt;!&ndash; 显示提醒信息的button android:layout_weight=1  是4个TextView，平分手机界面的宽度&ndash;&gt;-->
        <!--<TextView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@color/transparent"-->
        <!--android:focusable="false"-->
        <!--android:visibility="invisible" />-->

        <!--<TextView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:focusable="false"-->
        <!--android:visibility="invisible" />-->

        <!--<RelativeLayout-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:focusable="false">-->

        <!--<TextView-->
        <!--android:id="@+id/tv_cart_num"-->
        <!--android:layout_width="15dp"-->
        <!--android:layout_height="15dp"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_marginTop="2dp"-->
        <!--android:background="@drawable/circle_red_shape"-->
        <!--android:gravity="center"-->
        <!--android:text="0"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="9sp"-->
        <!--android:textStyle="bold"-->
        <!--android:visibility="visible" />-->

        <!--</RelativeLayout>-->

        <!--<TextView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:focusable="false"-->
        <!--android:visibility="invisible" />-->
        <!--</LinearLayout>-->
    </RelativeLayout>

    <include layout="@layout/activity_layout_foot" />

</RelativeLayout>
