<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bk"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include layout="@layout/activity_layout_head" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_service_tel"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:text="@string/service_tel"
                android:textColor="@color/app_main_text_color"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:id="@+id/tv_service_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:text="@string/service_tel_number"
                android:textColor="@color/app_text_color2"
                android:textSize="@dimen/font_size_normal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_wechat_official"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:text="@string/wechat_official_account"
                android:textColor="@color/app_main_text_color"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:id="@+id/tv_wechat_official"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:text="@string/lianqu_wechat_official_account"
                android:textColor="@color/app_text_color2"
                android:textSize="@dimen/font_size_normal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_user_id"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:text="用户ID"
                android:textColor="@color/app_main_text_color"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:textColor="@color/app_text_color2"
                android:textSize="@dimen/font_size_normal" />

        </RelativeLayout>
    </LinearLayout>

</layout>