<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include layout="@layout/activity_layout_head" />

        <include layout="@layout/activity_layout_foot" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_layout_title"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp">

                <EditText
                    android:id="@+id/et_invitation_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/icon_invitation_code"
                    android:drawablePadding="5dp"
                    android:hint="@string/enter_invitation_code"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="@color/app_text_color1"
                    android:textColorHint="#666666"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/font_size_normal" />

                <ImageView
                    android:id="@+id/iv_empty1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:src="@drawable/icon_edit_del"
                    android:visibility="invisible" />

                <!--分隔线-->
                <View
                    style="@style/DivideLine"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/icon_phone"
                    android:drawablePadding="5dp"
                    android:hint="@string/enter_phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="@color/app_text_color1"
                    android:textColorHint="#666666"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/font_size_normal" />

                <ImageView
                    android:id="@+id/iv_empty2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:src="@drawable/icon_edit_del"
                    android:visibility="invisible" />

                <!--分隔线-->
                <View
                    style="@style/DivideLine"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/et_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="150dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/icon_verification_code"
                    android:drawablePadding="5dp"
                    android:hint="@string/enter_verification_code"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="@color/app_text_color1"
                    android:textColorHint="#666666"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/font_size_normal" />

                <TextView
                    android:id="@+id/tv_get_code"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_red_normal_shape"
                    android:gravity="center"
                    android:text="@string/get_verification_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_middle" />

                <ImageView
                    android:id="@+id/iv_empty3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/tv_get_code"
                    android:padding="5dp"
                    android:src="@drawable/icon_edit_del"
                    android:visibility="invisible" />

                <!--分隔线-->
                <View
                    style="@style/DivideLine"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <CheckBox
                    android:id="@+id/cb_yiye_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:button="@drawable/checkbox_selector"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:text="我已阅读并接受了"
                    android:textColor="@color/app_text_color1"
                    android:textSize="@dimen/font_size_middle" />

                <TextView
                    android:id="@+id/tv_yiye_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/cb_yiye_agreement"
                    android:gravity="center_vertical"
                    android:text="@string/license_agreement"
                    android:textColor="@color/main_text_color"
                    android:textSize="@dimen/font_size_middle" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_top_bar"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_red_selector"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal" />

        </LinearLayout>

    </RelativeLayout>

</layout>